<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Activity Recognition</string>

  <string name="notification_channel_id">1002</string>
  <string name="notification_title">Federated learning running</string>
  <string name="cancel_download">Cancel federated learning</string>

  <string name="start_action">Start</string>
  <string name="stop_action">Stop</string>
  <string name="inference_button">Get Inference</string>
  <string name="prev_button">Go Back</string>
  <string name="start_fl">Start Federated Learning</string>

  <string name="output_title">Output probabilities</string>
  <string name="data_collection_title">Select a class for data collection</string>
  <string name="total_instances_title">Total instances</string>
  <string name="training_stats_title">Training stats</string>
  <string name="loss_title">Loss</string>

  <string name="logo_title">On-Device Activity Recognizer</string>

  <!--  'walking', 'standing', 'jogging', 'sitting', 'biking', 'upstairs',
   'downstairs',-->

  <string name="classA_class">Walking</string>
  <string name="classB_class">Standing</string>
  <string name="classC_class">Jogging</string>
  <string name="classD_class">Sitting</string>
  <string name="classE_class">Biking</string>
  <string name="classF_class">Upstairs</string>
  <string name="classG_class">Downstairs</string>

  <string name="zero_value">0</string>
    <string name="on_device_activity_recognition">On device activity recognition</string>

    <string-array name="options_array">
      <item>Data Collection</item>
      <item>Training</item>
      <!--    <item>Inference</item>-->
    </string-array>

  <string-array name="class_array">
    <item>Walking</item>
    <item>Standing</item>
    <item>Jogging</item>
    <item>Sitting</item>
    <item>Biking</item>
    <item>Upstairs</item>
    <item>Downstairs</item>

    <!--    <item>Class C</item>-->
    <!--    <item>Class D</item>-->
    <!--    <item>Class E</item>-->
    <!--    <item>Class F</item>-->
    <!--    <item>Class G</item>-->
  </string-array>

</resources>