<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarTrackVertical="@drawable/abc_vector_test">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardBackground"
            android:padding="10sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/classACountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/classA_class"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />

                <TextView
                    android:id="@+id/classACountValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/classBCountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/classB_class"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />

                <TextView
                    android:id="@+id/classBCountValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/classCCountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/classC_class"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />

                <TextView
                    android:id="@+id/classCCountValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/classDCountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/classD_class"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />

                <TextView
                    android:id="@+id/classDCountValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/classECountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/classE_class"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />

                <TextView
                    android:id="@+id/classECountValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/classFCountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/classF_class"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />

                <TextView
                    android:id="@+id/classFCountValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/classGCountTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/classG_class"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />

                <TextView
                    android:id="@+id/classGCountValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/titillium_web" />
            </TableRow>

        </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cardBackground">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/buttonBackground"
            android:drawableStart="@drawable/abc_vector_test"
            android:fontFamily="sans-serif-condensed"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/prev_button"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>